WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110160
[WK2] Cannot load documents with blob urls
https://bugs.webkit.org/show_bug.cgi?id=110160
Summary
[WK2] Cannot load documents with blob urls
Alexey Proskuryakov
Reported
2013-02-18 15:10:58 PST
blob: urls don't work for main resources (even without NetworkProcess).
Attachments
proposed fix
(4.43 KB, patch)
2013-02-18 15:17 PST
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-02-18 15:17:00 PST
Created
attachment 188949
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-02-18 17:17:26 PST
<
rdar://problem/13019872
>
Alexey Proskuryakov
Comment 3
2013-02-19 10:31:20 PST
Fixed in <
http://trac.webkit.org/changeset/143353
>.
Alexey Proskuryakov
Comment 4
2013-02-19 11:08:30 PST
And <
http://trac.webkit.org/changeset/143358
> for test.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug