        [WK2] Cannot load documents with blob urls         https://bugs.webkit.org/show_bug.cgi?id=110160

Reviewed by Sam Weinig.

        * WebProcess/WebPage/WebPage.cpp: (WebKit::WebPage::canHandleRequest):
        Added knowledge about blobs.



git-svn-id: svn://svn.chromium.org/blink/trunk@143353 bbb929c8-8fbe-4397-9dbb-9b2b20218538